api working with consoled main

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 </head>
 
 <body>
+    <!-- Header with the weather dashboard -->
 
+    <!-- Search bar and searches container -->
+
+    <!-- city and 5 day forecast container  -->
 </body>
 
 </html>
