--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- linked bootsrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
     <!-- linked css -->
     <link rel="stylesheet" href="./assets/css/styles.css">
     <!-- linked jquery  -->
@@ -16,10 +20,62 @@
 
 <body>
     <!-- Header with the weather dashboard -->
-
+    <header class="row jusify-content-right">
+        <h1 class="col">Weather Dashboard</h1>
+    </header>
     <!-- Search bar and searches container -->
+    <main class="row">
 
-    <!-- city and 5 day forecast container  -->
+        <section class="col-3">
+            <div class="row">
+                <input id="searchInput" type="text" placeholder="Enter City">
+            </div>
+            <div class="row">
+                <button type="button" class="btn btn-outline-success" id="searchBtn">Search</button>
+            </div>
+        </section>
+        <section class="col-9">
+            <section class="row">
+                <h2>City: <span id="city"></span></h2>
+                <h3>Temp: <span id="temp"></span></h3>
+                <h3>Wind: <span id="wind"></span></h3>
+                <h3>Humidity: <span id="humidity"></span></h3>
+            </section>
+            <!-- city and 5 day forecast container  -->
+            <section class="row">
+                <section class="col">
+                    <h5 id="date">Date </h5>
+                    <h6 id="temp">Temp: </h6>
+                    <h6 id="wind">Wind: </h6>
+                    <h6 id="humidity">Humidity: </h6>
+                </section>
+                <section class="col">
+                    <h5 id="date">Date: </h5>
+                    <h6 id="temp">Temp: </h6>
+                    <h6 id="wind">Wind: </h6>
+                    <h6 id="humidity">Humidity: </h6>
+                </section>
+                <section class="col">
+                    <h5 id="date">date: </h5>
+                    <h6 id="temp">Temp: </h6>
+                    <h6 id="wind">Wind: </h6>
+                    <h6 id="humidity">Humidity: </h6>
+                </section>
+                <section class="col">
+                    <h5 id="date">date: </h5>
+                    <h6 id="temp">Temp: </h6>
+                    <h6 id="wind">Wind: </h6>
+                    <h6 id="humidity">Humidity: </h6>
+                </section>
+                <section class="col">
+                    <h5 id="date">date: </h5>
+                    <h6 id="temp">Temp: </h6>
+                    <h6 id="wind">Wind: </h6>
+                    <h6 id="humidity">Humidity: </h6>
+                </section>
+            </section>
+        </section>
+    </main>
 </body>
 
 </html>
