--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
         <section class="col-9">
             <section class="row">
-                <h2>City: <span id="city"></span></h2>
+                <h2><span id="searchCity">City</span><span id="searchDate"></span><span id="icon"></span></h2>
                 <h3>Temp: <span id="temp"></span></h3>
                 <h3>Wind: <span id="wind"></span></h3>
                 <h3>Humidity: <span id="humidity"></span></h3>
