added comments css and html

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <header class="row jusify-content-right">
         <h1 class="col">Weather Dashboard</h1>
     </header>
-    <!-- Search bar and searches container -->
-    <main class="row">
 
+    <!-- main container -->
+    <main class="row">
+        <!-- input section with button -->
         <section class="col-3">
             <div class="row">
                 <input id="searchInput" type="text" placeholder="Enter City">
@@ -34,6 +35,7 @@
                 <button type="button" class="btn btn-outline-success" id="searchBtn">Search</button>
             </div>
         </section>
+        <!-- searched or clicked city's information -->
         <section class="col-9">
             <section class="row">
                 <h2><span id="searchCity">City</span><span id="searchDate"></span><span id="icon"></span></h2>
