--- a/index.html
+++ b/index.html
@@ -46,38 +46,8 @@
                 <h3>Humidity: <span id="humidity"></span></h3>
             </section>
             <!-- city and 5 day forecast container  -->
-            <section class="row">
+            <section class="row" id="forecastRow">
 
-                <section class="col forecastDay">
-                    <h5 id="date">Date </h5>
-                    <h6 id="temp">Temp: </h6>
-                    <h6 id="wind">Wind: </h6>
-                    <h6 id="humidity">Humidity: </h6>
-                </section>
-                <section class="col forecastDay">
-                    <h5 id="date">Date: </h5>
-                    <h6 id="temp">Temp: </h6>
-                    <h6 id="wind">Wind: </h6>
-                    <h6 id="humidity">Humidity: </h6>
-                </section>
-                <section class="col forecastDay">
-                    <h5 id="date">date: </h5>
-                    <h6 id="temp">Temp: </h6>
-                    <h6 id="wind">Wind: </h6>
-                    <h6 id="humidity">Humidity: </h6>
-                </section>
-                <section class="col forecastDay">
-                    <h5 id="date">date: </h5>
-                    <h6 id="temp">Temp: </h6>
-                    <h6 id="wind">Wind: </h6>
-                    <h6 id="humidity">Humidity: </h6>
-                </section>
-                <section class="col forecastDay">
-                    <h5 id="date">date: </h5>
-                    <h6 id="temp">Temp: </h6>
-                    <h6 id="wind">Wind: </h6>
-                    <h6 id="humidity">Humidity: </h6>
-                </section>
             </section>
         </section>
     </main>
